[workspace.package]
authors = ["ArcheLabs"]
edition = "2021"
homepage = "https://github.com/ArcheLabs/vibly-chain"
license = "Apache-2.0"
repository = "https://github.com/ArcheLabs/vibly-chain"

[workspace]
default-members = ["node", "runtime"]
members = [
  "node",
  "runtime",
  "solo-node",
  "solo-runtime",
  "primitives/common",
  "primitives/identity",
  "primitives/payment",
  "pallets/identity-core",
  "pallets/agent-staking",
  "pallets/onboarding-distribution",
  "pallets/payment-intent",
  "pallets/vibly-emergency",
]
resolver = "2"

[workspace.lints.rust]
suspicious_double_ref_op = {level = "allow", priority = 2}
unexpected_cfgs = {level = "warn", check-cfg = [
  'cfg(build_opt_level, values("3"))',
  'cfg(build_profile, values("debug", "release"))',
  'cfg(enable_alloc_error_handler)',
  'cfg(fuzzing)',
  'cfg(ignore_flaky_test)',
  'cfg(substrate_runtime)',
]}

[workspace.lints.clippy]
all = {level = "allow", priority = 0}
bind_instead_of_map = {level = "allow", priority = 2}
borrowed-box = {level = "allow", priority = 2}
complexity = {level = "warn", priority = 1}
correctness = {level = "warn", priority = 1}
default_constructed_unit_structs = {level = "allow", priority = 2}
derivable_impls = {level = "allow", priority = 2}
eq_op = {level = "allow", priority = 2}
erasing_op = {level = "allow", priority = 2}
extra-unused-type-parameters = {level = "allow", priority = 2}
identity-op = {level = "allow", priority = 2}
if-same-then-else = {level = "allow", priority = 2}
needless-lifetimes = {level = "allow", priority = 2}
needless_option_as_deref = {level = "allow", priority = 2}
nonminimal-bool = {level = "allow", priority = 2}
option-map-unit-fn = {level = "allow", priority = 2}
stable_sort_primitive = {level = "allow", priority = 2}
too-many-arguments = {level = "allow", priority = 2}
type_complexity = {level = "allow", priority = 2}
unit_arg = {level = "allow", priority = 2}
unnecessary_cast = {level = "allow", priority = 2}
useless_conversion = {level = "allow", priority = 2}
while_immutable_condition = {level = "allow", priority = 2}
zero-prefixed-literal = {level = "allow", priority = 2}

[workspace.dependencies]
clap = {version = "4.6.0"}
codec = {version = "3.7.5", default-features = false, package = "parity-scale-codec"}
color-print = {version = "0.3.4"}
cumulus-pallet-parachain-system = {version = "0.25.0", default-features = false}
docify = {version = "0.4.1"}
frame = {version = "0.14.0", default-features = false, package = "polkadot-sdk-frame"}
futures = {version = "0.3.32"}
hex-literal = {version = "1.1.0", default-features = false}
jsonrpsee = {version = "0.24.10"}
log = {version = "0.4.22", default-features = false}
pallet-identity-core = {path = "./pallets/identity-core", default-features = false}
pallet-agent-staking = {path = "./pallets/agent-staking", default-features = false}
pallet-onboarding-distribution = {path = "./pallets/onboarding-distribution", default-features = false}
pallet-payment-intent = {path = "./pallets/payment-intent", default-features = false}
pallet-vibly-emergency = {path = "./pallets/vibly-emergency", default-features = false}
pallet-balances = {version = "46.0.0", default-features = false}
pallet-timestamp = {version = "44.0.0", default-features = false}
polkadot-sdk = {version = "2512.3.3", default-features = false}
prometheus-endpoint = {version = "0.17.7", default-features = false, package = "substrate-prometheus-endpoint"}
scale-info = {version = "2.11.6", default-features = false}
serde = {version = "1.0.214", default-features = false}
serde_json = {version = "1.0.132", default-features = false}
smallvec = {version = "1.11.0", default-features = false}
sp-core = {version = "39.0.0", default-features = false}
sp-io = {version = "44.0.0", default-features = false}
sp-runtime = {version = "45.0.0", default-features = false}
substrate-wasm-builder = {version = "31.1.0", default-features = false}
vibly-chain-runtime = {path = "./runtime", default-features = false}
vibly-solo-runtime = {path = "./solo-runtime", default-features = false}
vibly-primitives-common = {path = "./primitives/common", default-features = false}
vibly-primitives-identity = {path = "./primitives/identity", default-features = false}
vibly-primitives-payment = {path = "./primitives/payment", default-features = false}

[profile.release]
opt-level = 3
panic = "abort"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[patch.crates-io]
bindgen = { path = "vendor/bindgen-0.72.1" }
