[package]
name = "vibly-chain-node"
description = "A vibly-chain parachain node built with Substrate and Cumulus."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[[bin]]
name = "vibly-chain-node"
path = "src/main.rs"
test = false
bench = false

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
color-print = { workspace = true }
docify = { workspace = true }
futures = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }
log = { workspace = true, default-features = true }
vibly-chain-runtime.workspace = true
polkadot-sdk = { workspace = true, features = ["node", "polkadot-primitives"] }
prometheus-endpoint.default-features = true
prometheus-endpoint.workspace = true
serde = { features = ["derive"], workspace = true, default-features = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"log/std",
	"vibly-chain-runtime/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"vibly-chain-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"vibly-chain-runtime/try-runtime",
	"polkadot-sdk/try-runtime",
]
