[package]
authors.workspace = true
description = "The vibly-chain parachain runtime built on the Polkadot SDK parachain template."
edition.workspace = true
homepage.workspace = true
license = "Unlicense"
name = "vibly-chain-runtime"
publish = false
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[dependencies]
codec = {features = ["derive"], workspace = true}
cumulus-pallet-parachain-system.workspace = true
docify = {workspace = true}
hex-literal = {optional = true, workspace = true, default-features = true}
log = {workspace = true}
pallet-identity-core.workspace = true
pallet-payment-intent.workspace = true
polkadot-sdk = {workspace = true, features = [
  "assets-common",
  "cumulus-pallet-aura-ext",
  "cumulus-pallet-session-benchmarking",
  "cumulus-pallet-weight-reclaim",
  "cumulus-pallet-xcm",
  "cumulus-pallet-xcmp-queue",
  "cumulus-primitives-aura",
  "cumulus-primitives-core",
  "cumulus-primitives-utility",
  "pallet-aura",
  "pallet-authorship",
  "pallet-balances",
  "pallet-collator-selection",
  "pallet-message-queue",
  "pallet-session",
  "pallet-sudo",
  "pallet-timestamp",
  "pallet-transaction-payment",
  "pallet-transaction-payment-rpc-runtime-api",
  "pallet-xcm",
  "parachains-common",
  "polkadot-parachain-primitives",
  "polkadot-runtime-common",
  "runtime",
  "staging-parachain-info",
  "staging-xcm",
  "staging-xcm-builder",
  "staging-xcm-executor",
], default-features = false}
scale-info = {features = ["derive"], workspace = true}
serde_json = {workspace = true, default-features = false, features = ["alloc"]}
smallvec = {workspace = true, default-features = false}
vibly-primitives-common.workspace = true
vibly-primitives-identity.workspace = true
vibly-primitives-payment.workspace = true

[build-dependencies]
docify = {workspace = true}
substrate-wasm-builder = {optional = true, workspace = true, default-features = true}

[features]
default = ["std"]
metadata-hash = ["substrate-wasm-builder/metadata-hash"]
on-chain-release-build = ["metadata-hash"]
runtime-benchmarks = [
  "cumulus-pallet-parachain-system/runtime-benchmarks",
  "hex-literal",
  "pallet-identity-core/runtime-benchmarks",
  "pallet-payment-intent/runtime-benchmarks",
  "polkadot-sdk/runtime-benchmarks",
]
std = [
  "codec/std",
  "cumulus-pallet-parachain-system/std",
  "log/std",
  "pallet-identity-core/std",
  "pallet-payment-intent/std",
  "polkadot-sdk/std",
  "scale-info/std",
  "serde_json/std",
  "substrate-wasm-builder",
  "vibly-primitives-common/std",
  "vibly-primitives-identity/std",
  "vibly-primitives-payment/std",
]
try-runtime = [
  "cumulus-pallet-parachain-system/try-runtime",
  "pallet-identity-core/try-runtime",
  "pallet-payment-intent/try-runtime",
  "polkadot-sdk/try-runtime",
]
