[package]
name = "pallet-agent-staking"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
pallet-identity-core.workspace = true
pallet-onboarding-distribution.workspace = true
scale-info = { features = ["derive"], workspace = true }
vibly-primitives-common.workspace = true
vibly-primitives-identity.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
pallet-timestamp.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = [
	"codec/std",
	"frame/std",
	"pallet-balances/std",
	"pallet-identity-core/std",
	"pallet-onboarding-distribution/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"vibly-primitives-common/std",
	"vibly-primitives-identity/std",
]
try-runtime = ["frame/try-runtime"]
