[package]
name = "pallet-identity-core"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
vibly-primitives-common.workspace = true
vibly-primitives-identity.workspace = true

[dev-dependencies]
sp-io = { version = "44.0.0", default-features = false }
polkadot-sdk = { workspace = true, features = ["pallet-timestamp"], default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"polkadot-sdk/std",
	"vibly-primitives-common/std",
	"vibly-primitives-identity/std",
]
try-runtime = ["frame/try-runtime"]
