[package]
name = "pallet-identity-core"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
scale-info = { features = ["derive"], workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
vibly-primitives-common.workspace = true
vibly-primitives-identity.workspace = true

[dev-dependencies]
pallet-timestamp.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = [
	"codec/std",
	"frame/std",
	"scale-info/std",
	"pallet-timestamp/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"vibly-primitives-common/std",
	"vibly-primitives-identity/std",
]
try-runtime = ["frame/try-runtime"]
