[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "vibly-primitives-common"
publish = false
repository.workspace = true
version = "0.1.0"

[lints]
workspace = true

[dependencies]
codec = {workspace = true, features = ["derive"], default-features = false}
frame = {workspace = true, features = ["runtime"], default-features = false}
scale-info = {workspace = true, features = ["derive"], default-features = false}
sp-core = {workspace = true, default-features = false}

[features]
default = ["std"]
std = ["codec/std", "frame/std", "scale-info/std", "sp-core/std"]
